# pytests_lab

.github/workflows/: ci.yml
tiny-todo/: .gitignore  README.md  pyproject.toml
tiny-todo/.github/workflows/: ci.yml
tiny-todo/src/tiny_todo/: __init__.py  todo.py
tiny-todo/tests/: test_todo.py
