[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-todo"
version = "0.1.0"
description = "A tiny JSON-backed TodoList utility"
authors = [{ name = "Tooba Ali" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
